# tsearch

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
autoload/: tsearch.vim
plugin/: tsearch.vim
src/: main.rs
