[package]
name = "tsearch"
version = "0.1.10"
edition = "2021"
license = "MIT"
description = "Search codebase using treesitter query syntax"
repository = "https://github.com/prabirshrestha/tsearch"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.3.0", features = ["derive"] }
ignore = "0.4.20"
rayon = "1.7.0"
stopwatch = "0.0.7"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tree-sitter = "0.20.10"
tree-sitter-rust = "0.20.3"
tree-sitter-typescript = "0.20.2"
