[package]
name = "tsearch"
version = "0.1.10"
edition = "2021"
license = "MIT"
description = "Search codebase using treesitter query syntax"
repository = "https://github.com/prabirshrestha/tsearch"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
ignore = "0.4.22"
rayon = "1.8.1"
stopwatch = "0.0.7"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tree-sitter = "0.20.10"
tree-sitter-rust = "0.20.4"
tree-sitter-typescript = "0.20.3"

[target.x86_64-pc-windows-msvc]
rustflags = ["-Ctarget-feature=+crt-static"]

[target.i686-pc-windows-msvc]
rustflags = ["-Ctarget-feature=+crt-static"]
